<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/>
    </parent>

    <groupId>de.playground.scalable-ticketing</groupId>
    <artifactId>backend-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <profiles>
        <profile>
            <id>all</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>ticket-common</module>
                <module>ticket-api</module>
                <module>ticket-worker</module>
            </modules>
        </profile>
        <profile>
            <id>api</id>
            <modules>
                <module>ticket-common</module>
                <module>ticket-api</module>
            </modules>
        </profile>
        <profile>
            <id>worker</id>
            <modules>
                <module>ticket-common</module>
                <module>ticket-worker</module>
            </modules>
        </profile>
    </profiles>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
